--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -65,6 +65,11 @@
           <li>
             <a href="/review">Review</a>
           </li>
+          <li>
+            <a href="https://www.financeit.ca/en/direct/payment-plan/YT0yNzEzNTcmbD0mcD1QemIwb1duaDZNemhEa3hkSTQ5Z1R3JnM9MCZ2PTE=/apply?slug=PBTFXw">
+              Financing
+            </a>
+          </li>
         </ul>
         <ul>
           <li>
