--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{{ description }}" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="{{ description | default('') }}" />
+    <meta name="keywords" content="{{ keywords | default('') }}" />
     <link rel="canonical" href="{{ client.domain }}{{ page.url }}" />
 
     <!--Social Media Display-->
