--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -54,12 +54,20 @@
       href="/assets/fonts/roboto-v29-latin-700.woff2"
       crossorigin
     />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="/assets/fonts/roboto-v29-latin-900.woff2"
+      crossorigin
+    />
+    <link rel="preload" as="style" href="/assets/css/root-critical.css" />
+    <link rel="stylesheet" href="/assets/css/root-critical.css" />
 
     <!-- Preload an image - tag not rendered if preloadImg is blank to stop console errors -->
     {% if preloadImg != '' %}
     <link rel="preload" as="image" href="{{ preloadImg }}" />
     {% endif %}
-
     <link rel="stylesheet" href="/assets/css/root.css" />
     <link rel="stylesheet" href="/assets/css/dark.css" />
 
