--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -88,7 +88,8 @@
         box-sizing: border-box;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        position: fixed;
+        position: sticky;
+        top: 0;
         z-index: 10000;
     }
     #cs-navigation:before {
@@ -140,13 +141,8 @@
         justify-content: space-between;
         align-items: center;
         gap: 1rem;
-        background: rgb(35, 155, 236);
-        background: linear-gradient(
-            280deg,
-            rgba(35, 155, 236, 1) 0%,
-            rgba(16, 85, 188, 1) 50%,
-            rgba(24, 95, 201, 1) 100%
-        );
+        // background: rgb(35, 155, 236);
+        background: linear-gradient(90deg, #ffffff 0%, #ffffff 35%, #185fc9 100%);
     }
     #cs-navigation .cs-contact-group {
         display: flex;
@@ -733,15 +729,11 @@
         padding: 0;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
-        background: rgb(35, 155, 236);
-        background: linear-gradient(
-            280deg,
-            rgba(35, 155, 236, 1) 0%,
-            rgba(16, 85, 188, 1) 50%,
-            rgba(24, 95, 201, 1) 100%
-        );
+        // background: rgb(35, 155, 236);
+        background: linear-gradient(90deg, #ffffff 0%, #ffffff 35%, #185fc9 100%);
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        position: fixed;
+        position: sticky;
+        top: 0;
         z-index: 10000;
     }
     #cs-navigation .cs-top-bar {
