--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -9,7 +9,7 @@
         <div class="cs-top-container">
             <!--Nav Logo-->
             <a href="/index" class="cs-logo" aria-label="back to home">
-                <img src="/assets/images/montanologo.png" alt="logo" width="197" height="43" aria-hidden="true"
+                <img src="/assets/images/logo/main-logo.webp" alt="logo" width="197" height="43" aria-hidden="true"
                     decoding="async">
             </a>
             <div class="cs-contact-group">
